--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,37 +9,32 @@
     crossorigin="anonymous">
 
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <title>CodeGig</title>
 </head>
 
 <body>
-  <header>
-    <h2><a href="index.html"><i class="fas fa-code"></i>
+  <header class="inner">
+    <h2><a href="/"><i class="fas fa-code"></i>
         CodeGig</a></h2>
     <nav>
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
-          <a href="gigs.html">All Gigs</a>
+          <a href="/gigs">All Gigs</a>
         </li>
         <li>
-          <a href="add.html">Add Gig</a>
-        </li>
+          <a href="/gigs/add">Add Gig</a>
+        </li>   
       </ul>
     </nav>
   </header>
-
-  <section id="search" class="search-wrap">
-    <h1>Find A Coding Gig</h1>
-    <form action="gigs.html" class="search-form">
-      <i class="fas fa-search"></i>
-      <input type="search" name="term" placeholder="Javascript, PHP, Rails, etc...">
-      <input type="submit" value="Search">
-    </form>
-  </section>
+    <div class="container">
+        {{{ body }}}
+    </div>
+    
 </body>
 
 </html>
